--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-scripts": "5.0.1",
