--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
