--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "express": "^4.19.2",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fart": "nodemon --watch ../user server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "react-router-dom": "^6.22.0"
   }
 }
