--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnection": "Server=desktop-t130utd;Database=NCart;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Issuer": "https://www.xd.com/",
+    "Audience": "https://www.amongus.com/",
+    "Key": "this is my custom Secret key for authnetication"
   }
 }
