--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -5,12 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=desktop-t130utd;Database=NCart;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DbConnection": "Server=windowo;Database=NCart_The_Real;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Issuer": "https://www.xd.com/",
-    "Audience": "https://www.amongus.com/",
-    "Key": "this is my custom Secret key for authnetication"
+    "Issuer": "https://www.xd.com",
+    "Audience": "https://www.amongus.com",
+    "Key":"this is my custom Secret key for authnetication"
   }
 }
