--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "react-router-dom": "^6.22.0"
   }
