--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -46,9 +46,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
+    "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "nodemon": "^3.1.0",
     "react-router-dom": "^6.22.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios|lodash).+\\.js$"
+    ]
   }
 }
