--- a/Frontend/admin/package.json
+++ b/Frontend/admin/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fart": "nodemon --watch ../user server.js",
-    "docs": "jsdoc -c ./src/.jsdoc.conf.json -d ./public/docs"
+    "docsOld": "jsdoc -c ./src/.jsdoc.conf.json -d ./public/docs",
+    "docs": "documentation build src/**/*.js -f html -o public/docs"
   },
   "eslintConfig": {
     "extends": [
