--- a/.gitignore
+++ b/.gitignore
@@ -486,3 +486,5 @@ $RECYCLE.BIN/
 # Server connection string containing file
 appsettings.json
 /Backend/.example appsettings.json
+
+/Backend/key/*
